# baml_elixir

./: .gitignore  .gitmodules  .tool-versions  README.md  RELEASE.md  checksum-Elixir.BamlElixir.Native.exs  mix.exs
.github/workflows/: release.yml
lib/: baml_elixir.ex
lib/baml_elixir/: client.ex  collector.ex  native.ex  type_builder.ex
native/baml_elixir/: Cargo.toml  README.md
native/baml_elixir/src/: collector.rs  lib.rs
scripts/: update_baml.sh
test/: baml_elixir_test.exs
test/baml_src/: baml_elixir_test.baml
