[package]
name = "baml_elixir"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "baml_elixir"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.1", default-features = false, features = ["derive", "nif_version_2_15"] }
baml-runtime = { path = "baml/engine/baml-runtime" }
baml-types = { path = "baml/engine/baml-lib/baml-types" }